# offpunk

./: .build.yml  CHANGELOG  CONTRIBUTORS  LICENSE  README.md  TODO  VERSIONS  ansicat.py  ansirenderer.py  av98.py  cert_migration.py  debug.sh  hatch_build.py  migrate-offpunk-cache  netcache.py  offblocklist.py  offpunk.py  offthemes.py  offutils.py  openk.py  opnk.py  pyproject.toml  requirements.txt  setup.py  ubuntu_dependencies.txt  unmerdify.py  xkcd.py  xkcdpunk.py
.github/workflows/: upstream_sync.yml
debian/: control  copyright
man/: ansicat.1  migrate-offpunk-cache.1  netcache.1  offpunk.1  openk.1  opnk.1  unmerdify.1  xkcdpunk.1
po/: create_pot.sh  es_ES.po  extract_docstrings.py  fa.po  gl.po  nl_BE.po  sv.po
tests/: geminiclient_test.py
tutorial/: bookmarks.gmi  contribute.gmi  dev-guidelines.gmi  firststeps.gmi  frozen.gmi  gemini.gmi  help.gmi  index.gmi  install.gmi  lists.gmi  myfirstlink.gmi  offline.gmi  open.gmi  page_template.html  subscriptions.gmi  sync.gmi  tasks_pending.gmi  tour.gmi  tour1.gmi  tour2.gmi  tour3.gmi  translation.gmi  view.gmi  whatisoffpunk.gmi  workflow_jmcs.gmi  workflow_ploum.gmi
~/debug/data/offpunk/lists/: history.gmi  rss.gmi  test.gmi  to_fetch.gmi
